processed/gerrit/txt_full/50878.txt
Change:     50878
Subject:    LU-16803 build: Decouple guid_t and uuid_le
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/50878
Change-Id:  I7b2444a98c8e07ed16704d119bd748b506021ba3
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Shaun Tancheff
Created:    2023-05-07 06:11:35.000000000
Updated:    2023-05-08 10:31:46.000000000
Patch Set:  1
Insertions: +37
Deletions:  -1
Comments:   2 (0 unresolved)

--- Reviewers ---
  REVIEWER: Andreas Dilger, James Simmons, Shaun Tancheff

--- Commit Message ---
LU-16803 build: Decouple guid_t and uuid_le

Linux commit v6.2-rc5-72-g5e6a51787fef
 uuid: Decouple guid_t and uuid_le types and respective macros
Removed uapi guid_t (user api should use uuid_le)

Test-Parameters: trivial
Fixes: 20621c761b ("LU-16655 scrub: change sf_uuid to guid_t")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I7b2444a98c8e07ed16704d119bd748b506021ba3

--- Review History ---

--- Message (Shaun Tancheff, 2023-05-07 06:11:35.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2023-05-07 06:12:26.000000000) ---
Patch Set 1:

(1 comment)

1 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2023-05-07 06:16:46.000000000) ---
Patch Set 1:

(1 comment)

Builds for x86_64 centos7,rhel8.5 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/30978/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (Lustre Gerrit Janitor, 2023-05-07 06:28:13.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/30978/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2023-05-07 06:41:50.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/94616/ : SUCCESS

--- Message (Maloo, 2023-05-07 06:42:29.000000000) ---
Patch Set 1:

The following sessions will be run for build 94616 patch 1

Enforced:
- review-ldiskfs-dne on el8.7-x86_64/ldiskfs servers and clients
- review-ldiskfs-dne-arm on el8.7-x86_64/ldiskfs servers and el8.7-aarch64/ldiskfs clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=94616&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=94616#redirect

--- Message (Lustre Gerrit Janitor, 2023-05-07 09:08:51.000000000) ---
Patch Set 1:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed Successfully

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/30978/results.html

--- Message (Maloo, 2023-05-07 11:48:46.000000000) ---
Patch Set 1:

Passed enforced test review-ldiskfs-dne on RHEL 8.7/x86_64 uploaded by Onyx Autotest from onyx-75vm1: https://testing.whamcloud.com/test_sessions/ee707db7-f8f5-48d9-920b-daa424287e7e ran 5 tests.

--- Message (Maloo, 2023-05-07 13:42:09.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-ldiskfs-dne-arm on RHEL 8.7/aarch64, RHEL 8.7/x86_64 uploaded by Onyx Autotest from onyx-91vm1: https://testing.whamcloud.com/test_sessions/7244c8df-9d91-4078-bc22-01627cb42341 ran 5 tests.

--- Message (Andreas Dilger, 2023-05-07 15:11:38.000000000) ---
Patch Set 1: Code-Review-1

James also has a similar patch https://review.whamcloud.com/50641 that also fixes a second build issue and is ready to land.

--- Message (Shaun Tancheff, 2023-05-08 01:26:52.000000000) ---
Patch Set 1:

> Patch Set 1: Code-Review-1
> 
> James also has a similar patch https://review.whamcloud.com/50641 that also fixes a second build issue and is ready to land.

I was not aware. Yes James patch resolves the issue.

--- Message (Shaun Tancheff, 2023-05-08 01:27:06.000000000) ---
Abandoned

In favor of https://review.whamcloud.com/50641

--- Message (Shaun Tancheff, 2023-05-08 10:31:46.000000000) ---
Patch Set 1:

> Patch Set 1:
> 
> > Patch Set 1: Code-Review-1
> > 
> > James also has a similar patch https://review.whamcloud.com/50641 that also fixes a second build issue and is ready to land.
> 
> I was not aware. Yes James patch resolves the issue.

Ugh. Solves the user space having the newer headers but it breaks the build against v6.3:

  CC [M]  /home/shaun/lustre-release/lustre/obdclass/scrub.o
/home/shaun/lustre-release/lustre/obdclass/scrub.c: In function ‘scrub_file_to_cpu’:
/home/shaun/lustre-release/lustre/obdclass/scrub.c:50:12: error: passing argument 1 of ‘guid_copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   50 |  guid_copy(&des->sf_uuid, &src->sf_uuid);
      |            ^~~~~~~~~~~~~
      |            |
      |            uuid_le * {aka struct <anonymous> *}
In file included from /home/shaun/lustre-release/lustre/include/lustre_scrub.h:36,
                 from /home/shaun/lustre-release/lustre/obdclass/scrub.c:38:
include/linux/uuid.h:51:38: note: expected ‘guid_t *’ {aka ‘struct <anonymous> *’} but argument is of type ‘uuid_le *’ {aka ‘struct <anonymous> *’}
   51 | static inline void guid_copy(guid_t *dst, const guid_t *src)
      |                              ~~~~~~~~^~~
